fix caret blinking in the readonly editor; fix bug when it is impossible to delete single inner custom tag in beat; fix bug with exident tag remove on mouse leave; add tooltip offset for charaters and tags; remove empty spaces before and after created tag; fix z-index on right menu grabber; fix minus button blinking;

--- a/src/app/layout/community/components/beats-flow-readonly/beats-flow-readonly.component.scss
+++ b/src/app/layout/community/components/beats-flow-readonly/beats-flow-readonly.component.scss
@@ -130,7 +130,7 @@ $editor-font: 14px 'Courier New', Courier, monospace;
                         border-left-style: solid;
                         border-left-width: 2px;
                         border-left-color: transparent;
-                        caret-color: $secondary-color;
+                        caret-color: transparent;
 
                         &:hover {
                             cursor: default;
