--- a/src/app/layout/dmo-editor/components/plot-points-flow/plot-points-flow.component.scss
+++ b/src/app/layout/dmo-editor/components/plot-points-flow/plot-points-flow.component.scss
@@ -74,9 +74,12 @@
             .plot-point-controls-container {
                 position: absolute;
                 margin-top: 6px;
-                margin-left: -18px;
+                margin-left: -40px;
                 display: none;
                 cursor: pointer;
+                padding-left: 14px;
+                padding-right: 14px;
+                height: 50px;
 
                 &:hover {
                     color: $secondary-color;
