--- a/src/app/shared/components/right-menu-grabber/right-menu-grabber.component.scss
+++ b/src/app/shared/components/right-menu-grabber/right-menu-grabber.component.scss
@@ -8,7 +8,7 @@
         position: absolute;
         right: -18px;
         top: 118px;
-        z-index: 800;
+        z-index: 100;
         display: flex;
         transition: right 0.4s;
         border-right: 0;
